--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 
         <!--CSS-->
         <link rel="stylesheet" href="main.css">
+        <link rel="icon" type="image/x-icon" href="/images/Favicon.svg">
     </head>
-    
+    <body>
+        <div class="navbar-top">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">About</a>
+            <a href="#contact">News</a>
+            <a href="#about">Download</a>
+            <a href="#credits">Credits</a>
+        </div>
+    </body>
 </html>
