--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!--CSS-->
         <link rel="stylesheet" href="main.css">
         <link rel="icon" type="image/x-icon" href="/images/Favicon.svg">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <div class="navbar-top">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">About</a>
-            <a href="#contact">News</a>
-            <a href="#about">Download</a>
-            <a href="#credits">Credits</a>
-        </div>
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
     </body>
 </html>
