--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <title>Error...</title>
     </head>
-    <body>
+    <body class="errorpage404">
         
 
         <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
@@ -48,6 +48,6 @@
             </div>
             </div>
           </nav>
-          <img src="images/404Page.svg" alt="404 Page Error">
+          <img src="images/404Error.svg" alt="404 Page Error">
     </body>
 </html>
