--- a/404.html
+++ b/404.html
@@ -48,6 +48,6 @@
             </div>
             </div>
           </nav>
-          <img src="images/404Error.svg" alt="404 Page Error">
+          <img src="images/Error404.svg" alt="404 Page Error">
     </body>
 </html>
