--- a/404.html
+++ b/404.html
@@ -49,6 +49,6 @@
             </div>
           </nav>
           <img src="images/Error404.svg" alt="404 Page Error">
-          <a href="../en-US" class="text-white hover:text-blue-500 font-semibold h-screen flex items-center justify-center"><<< Back into Action!</a>
+          <a href="../en-US" class="text-white hover:text-blue-500 font-semibold flex items-center justify-center"><<< Back into Action!</a>
     </body>
 </html>
