--- a/404.html
+++ b/404.html
@@ -50,5 +50,8 @@
           </nav>
           <img src="images/Error404.svg" alt="404 Page Error">
           <a href="../en-US" class="text-white hover:text-blue-500 font-semibold flex items-center justify-center"><<< Back into Action!</a>
+          <br>
+          <br>
+          <p class="text-white font-semibold flex items-center justify-center">ScratchCards 2023</p>
     </body>
 </html>
