--- a/404.html
+++ b/404.html
@@ -52,6 +52,6 @@
           <a href="../en-US" class="text-white hover:text-blue-500 font-semibold flex items-center justify-center text-lg"><<< Back into Action!</a>
           <br>
           <br>
-          <p class="text-white font-semibold flex items-center justify-center text-2xl">ScratchCards 2023</p>
+          <p class="text-white font-semibold flex items-center justify-center text-2xl align-text-bottom">ScratchCards 2023</p>
     </body>
 </html>
