Changed image for the home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </nav>
           <br>
           <br>
-          <a href="../en-US/about"><img src="images/HomePagePicture.svg" alt="HomePagePicture"></a>
+          <a href="../en-US/about"><img src="images/HomePageGraphic.svg" alt="HomePagePicture"></a>
 
     </body>
 </html>
