--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         <link rel="shortcut icon" type="image/x-icon" href="images/Favicon.svg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+          @font-face {
+            font-family: customfont;
+            src=url (downloads/akira_expanded_demo-webfont.woff)
+          }
+          h1 {
+            text-align: center;
+            font-size: 40px;
+            color: #fff;
+          }
+        </style>
     </head>
     <body>
         
