--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <br>
           <br>
           <a href="../en-US/about"><img src="images/HomePageGraphic.svg" alt="HomePagePicture"></a>
-
+<br>
+<br>
+          <h1>Greatness is Embraced Here.</h1>
+          <p>ScratchCards is a project based on introducing users to the Scratch Community.</p>
     </body>
 </html>
