--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
           @font-face {
-            font-family: customfont;
-            src=url (downloads/akira_expanded_demo-webfont.woff)
-          }
+    font-family: 'akira_expandedsuper_bold';
+    src: url('akira_expanded_demo-webfont.woff2') format('woff2'),
+         url('akira_expanded_demo-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
           h1 {
             text-align: center;
             font-size: 40px;
