--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           h1 {
             text-align: center;
             font-size: 40px;
-            color: #fff;
+            color: #000;
           }
         </style>
     </head>
