--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 }
           h1 {
+            font-family: customfont;
             text-align: center;
             font-size: 40px;
             color: #000;
