--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 }
           h1 {
-            font-family: customfont;
+            font-family: 'akira_expandedsuper_bold';
             text-align: center;
             font-size: 40px;
             color: #000;
