--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="shortcut icon" type="image/x-icon" href="images/Favicon.svg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+          @import url("https://rsms.me/inter/inter.css");
+        </style>
     </head>
     <body>
         
@@ -53,7 +56,7 @@
           <a href="../en-US/about"><img src="images/HomePageGraphic.svg" alt="HomePagePicture"></a>
 <br>
 <br>
-          <h1>Greatness is Embraced Here.</h1>
+          <h1 class="text-black text-6xl text-center font-bold font-inter">Greatness is Embraced Here.</h1>
           <p>ScratchCards is a project based on introducing users to the Scratch Community.</p>
     </body>
 </html>
